# GooberEats

./: .gitignore  AGENTS.md  Dockerfile.android  README.md  test.sh
.github/: app-release-build.yml
.github/workflows/: app-release-build.yml  app.yml  docker-backend.yml  fdroid-publish.yml  test-build.yml
GooberEats/: settings.gradle
GooberEats/app/: build.gradle
GooberEats/app/src/androidTest/java/cloud/goober/goobereats/: ExampleInstrumentedTest.java
GooberEats/app/src/main/: AndroidManifest.xml
GooberEats/app/src/main/res/drawable/: ic_quick_entry.xml
GooberEats/app/src/main/res/layout/: activity_main.xml  dialog_ai_entry.xml  dialog_new_entry.xml  dialog_user_id.xml  item_calorie_entry.xml  item_day_header.xml
GooberEats/app/src/main/res/menu/: menu_main.xml
GooberEats/app/src/main/res/values/: strings.xml  themes.xml
GooberEats/app/src/main/res/values-night/: themes.xml
GooberEats/app/src/main/res/xml/: network_security_config.xml
GooberEats/gradle/: libs.versions.toml
GooberEats/gradle/wrapper/: gradle-wrapper.properties
backend/: .dockerignore  .gitignore  Dockerfile  README.md  config.toml.sample  data.py  deploy.sh  docker-compose.dev.yml  docker-compose.yml  goobereats.service  pyproject.toml  requirements.txt  research.py  run.sh  server.py  test.py  test_api.py  test_estimation.py
backend/templates/: page.html  research.html  ui.html
docs/: DOCKERHUB_SETUP.md  FDROID_GITHUB_PAGES_SETUP.md  FDROID_SECRETS.md  REVIVAL_SUMMARY.md  android_integration_example.java
scripts/: build-apk.sh
(+2 files in other folders)
